components/modals/privacyPolicyModal/privacyPolicyModal.module.scss
.wrapper {
  display: flex;
  align-items: flex-end;
  justify-content: flex-end;
  position: fixed;
  bottom: 1rem;
  right: 1rem;
  width: 100%;
  border: none;
  background-color: transparent;
}

.card {
  --cardShadow: 0px 13px 27px -5px rgba(50, 50, 93, 0.25);
  width: 100%;
  border-radius: 8px;
  background-color: var(--white);
  height: auto;
  color: var(--dark-grey);
  display: grid;
  grid-template-columns: auto 1fr;
  align-items: center;
  padding: 4px 4px 4px 8px;
  box-shadow: var(--cardShadow);
  position: relative;

  @media (min-width: 600px) {
    max-width: 32.7rem;
  }
}

.arrow {
  --arrowHoverTransition: 150ms cubic-bezier(0.215, 0.61, 0.355, 1);
  --arrowHoverOffset: translateX(3px);
  position: relative;
  top: 1px;
  margin-left: 8px;
  stroke-width: 2;
  fill: none;
  stroke: currentColor;

  &LinePath {
    opacity: 0;
    transition: opacity var(--hoverTransition, var(--arrowHoverTransition));
  }

  &TipPath {
    transition: transform var(--hoverTransition, var(--arrowHoverTransition));
  }
}

[data-whatintent='keyboard'] .arrowLinePath {
  opacity: 1;
}

[data-whatintent='keyboard'] .arrowTipPath {
  transform: var(--arrowHoverOffset);
}

.textContentBox {
  padding: 16px 0px 16px 0;

  &Text {
    --textContentBoxTextSize: 1.5rem;
    margin: 0;
    font-size: var(--textContentBoxTextSize);
    line-height: calc(var(--textContentBoxTextSize) * 1.5);
  }

  &Link {
    position: relative;
    color: inherit;
    font-weight: 700;
    text-decoration: none;
    margin-left: 5px;
    white-space: nowrap;

    &:hover .arrowLinePath {
      opacity: 1;
    }
    &:hover .arrowTipPath {
      transform: var(--arrowHoverOffset);
    }
  }
}

.closeButton {
  display: flex;
  align-items: center;
  justify-content: center;
  border-style: none;
  margin: 0 1.2rem 0 0.6rem;
  background: none;
  width: 2rem;
  height: 2rem;
  cursor: pointer;
  padding: 0;

  &:hover .closeButtonIcon {
    fill: var(--grey-icon-hover);
  }
}

.closeButtonIcon {
  fill: var(--grey-icon);
}

.backdrop {
  --backdropShadowLight: rgba(10, 37, 64, 0.2);
  --backdropShadowDark: rgba(10, 37, 64, 0);
  --backdropShadowMaxHeight: 12.8rem;
  position: absolute;
  width: 100%;
  height: calc(100% + var(--backdropShadowMaxHeight));
  bottom: -1rem;
  right: -1rem;
  background: -webkit-gradient(
    linear,
    left bottom,
    left top,
    color-stop(0, var(--backdropShadowLight)),
    to(var(--backdropShadowDark))
  );
  background: linear-gradient(0deg, var(--backdropShadowLight) 0, var(--backdropShadowDark));
  -webkit-transform-origin: bottom center;
  transform-origin: bottom center;

  @media (min-width: 600px) {
    max-width: calc(32.7rem * 1.5);
    -webkit-mask-image: -webkit-gradient(
      linear,
      left top,
      right top,
      color-stop(0, transparent),
      color-stop(50%, var(--black)),
      to(var(--black))
    );
    -webkit-mask-image: linear-gradient(90deg, transparent 0, var(--black) 50%, var(--black));
    mask-image: -webkit-gradient(
      linear,
      left top,
      right top,
      color-stop(0, transparent),
      color-stop(50%, var(--black)),
      to(var(--black))
    );
    mask-image: linear-gradient(90deg, transparent 0, var(--black) 50%, var(--black));
  }
}

